# colombo-rental-price-predictor

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
docs/: data_dictionary.md  mkdocs.yml  model_documentation.md
docs/experiments/: feature_engineering.md  model_comparison.md
models/: best_rental_price_model.pkl  preprocessor.pkl
notebooks/: Rental Price Prediction Dataset.ipynb  Rental Price Prediction.ipynb
rental_price_prediction/: __init__.py  config.py  dataset.py  features.py  plots.py
rental_price_prediction/modeling/: predict.py  train.py
