[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rental_price_prediction"
version = "0.0.1"
description = "A machine learning system for predicting residential rental prices in Colombo, Sri Lanka using unconventional robust regression techniques. The project addresses the critical need for accurate rental price estimation in urban real estate markets by developing models that capture complex relationships between property features and rental values."
authors = [
  { name = "Abinaya Subramaniam" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["rental_price_prediction"]
force_sort_within_sections = true


